--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "todo-admin-panel",
+  "name": "todo-authorization",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,8 +13,7 @@
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@types/react-router-dom": "^5.3.3",
-    "ajv": "^6.12.6",
-    "ajv-keywords": "^3.5.2",
+    "ajv": "^8.17.1",
     "antd": "^5.24.2",
     "axios": "^1.8.1",
     "react": "^19.0.0",
